--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                     <li class="active"><a href="#main-header">Home</a></li>
                                     <li class=""><a href="#about">About</a></li>
                                     <li class=""><a href="#resources">Resources</a></li>
-                                    <li class=""><a href="womenSTEM.html">Opportunities</a></li>
+                                    <li class=""><a href="womenSTEM.html">Outreach</a></li>
                                     <li class=""><a href="team.html">Team</a></li>
                                     <li class=""><a href="#contact">Contact Us</a></li>
                                 </ul>
@@ -52,10 +52,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="banner-info text-center wow fadeIn delay-05s">
-                                <h2 class="bnr-sub-title">Welcome to our project</h2>
-                                <p class="bnr-para">
-                                    Working together to make the PAN genome happen
-                                </p>
+                                <h2 class="bnr-sub-title">Linking the maize pan genome to phenotypic outcomes</h2>
                                 <div class="brn-btn">
                                     <a href="#about" class="btn btn-more">Learn More</a>
                                 </div>
@@ -76,46 +73,47 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <h2 class="service-title pad-bt15">What is the PAN genome project?</h2>
-                        <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="sub-title pad-bt15">This project is seeking to understand the functional consequences of genome content variation on phenotypic outcomes and how the origin of genome content variation impacts phenotypic outcomes</p>
                         <hr class="bottom-line">
                     </div>
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
                         <div class="service-item">
-                            <h3><span>S</span>CIENCE</h3>
+                            <h3><span>P</span>HENOMIC DATA</h3>
                         </div>
                         <figure>
                             <img src="img/Field2.jpg" class="img-responsive">
                             <figcaption>
-                                <h2>Project For Everyone</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
-                                <a href="#indepth" style="color:black">learn more...</a>
+                                <br>
+                                <br>
+                                <p>Collecting phenotypic data on the Wisconsin Diversity Panel for seed composition, silk surface lipids, and whole plant morphological and physiological traits.</p>
                             </figcaption>
                         </figure>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
                         <div class="service-item">
-                            <h3><span>R</span>ESEARCH</h3>
+                            <h3><span>G</span>ENOMIC DATA</h3>
                         </div>
                         <figure>
                             <img src="img/PI.JPG" class="img-responsive">
                             <figcaption>
-                                <h2>Project For Everyone</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
-                                <a href="#indepth" style="color:black">learn more...</a>
+                                <br>
+                                <br>
+                                <p>Generating whole genome resequencing data for 500 maize lines and de novo genome assemblies to identify structural variants and signatures that indicate mechanistic origin.</p>
                             </figcaption>
                         </figure>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
                         <div class="service-item">
-                            <h3><span>O</span>PPORTUNITIES</h3>
+                            <h3><span>O</span>UTREACH</h3>
                         </div>
                         <figure>
                             <img src="img/Wstem2.JPG" class="img-responsive">
                             <figcaption>
-                                <h2>Project For Everyone</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
-                                <a href="#indepth" style="color:black">learn more...</a>
+                                <br>
+                                <br>
+                                <p>Creating and collating opportunities for women in STEM disciplines to broaden participation.</p>
+                                         <a href="womenSTEM.html" style="color:black">learn more...</a>
                             </figcaption>
                         </figure>
                     </div>
@@ -142,7 +140,7 @@
                     </div>
                     <div class="col-md-7">
                         <h2 class="service-title2 pad-bt15">Project<span class="logo-dec"> goal</span> 1</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
+                        <p>Identify genome content variation between maize inbred lines using a combination of de novo genome assemblies and exome capture.</p>
                         <!--<a class="btn btn-primary" href="#">View Project</i></a>-->
                     </div>
                 </div>
@@ -157,7 +155,7 @@
                     </div>
                     <div class="col-md-7">
                         <h2 class="service-title2 pad-bt15">Project<span class="logo-dec"> goal</span> 2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
+                        <p>Identify mechanistic signatures that elucidate the origin of genome content variation.</p>
                     </div>
                 </div>
                 <hr>
@@ -171,7 +169,7 @@
                     </div>
                     <div class="col-md-7">
                         <h2 class="service-title2 pad-bt15">Project<span class="logo-dec"> goal</span> 3</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
+                        <p>Identify genome content variation associated with phenotypic and chemotypic traits and identify mechanistic origins enriched within classes of traits.</p>
                         <!--<a class="btn btn-primary" href="#">View Project</i></a>-->
                     </div>
                 </div>
@@ -186,7 +184,7 @@
                     </div>
                     <div class="col-md-7">
                         <h2 class="service-title2 pad-bt15">Project<span class="logo-dec"> goal</span> 4</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
+                        <p>Utilize a set of synergistic activities aimed at providing young women with mentoring and training opportunities to foster their interest and engagement in STEM disciplines, and contribute to the increased representation of women in STEM.</p>
                         <!--<a class="btn btn-primary" href="#">View Project</i></a>-->
                     </div>
                 </div>
@@ -199,20 +197,19 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <h2 class="service-title pad-bt15">Resources</h2>
+                        <h2 class="service-title pad-bt15">Useful <span class="logo-dec"> Links</span></h2>
                         <hr class="bottom-line">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 text-center">
-                        <h2 class="service-title2 pad-bt15">Useful<span class="logo-dec"> links</span></h2>
-                        <a href="", style="color:#67696c"><h3>NCBI SRA</h3></a>
-                        <a href="", style="color:#67696c"><h3>NSF website</h3></a>
+                    <div class="col-md-4 text-center">
+                        <a href="https://www.ncbi.nlm.nih.gov/sra", target="_blank", style="color:#67696c"><h3>NCBI SRA</h3></a>
                     </div>
-                    <div class="col-md-6 text-center">
-                        <h2 class="service-title2 pad-bt15">Data<span class="logo-dec"> sets</span></h2>
-                        <a href="", style="color:#67696c"><h3>Wallace</h3></a>
-                        <a href="", style="color:#67696c"><h3>Maize NAM parents</h3></a>
+                    <div class="col-md-4 text-center">
+                        <a href="https://nsf.gov/funding/pgm_summ.jsp?pims_id=5338", target="_blank", style="color:#67696c"><h3>NSF Plant genome</h3></a>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <a href="https://www.maizegdb.org/genome/assemblies_overview", target="_blank", style="color:#67696c"><h3>Maize assemblies</h3></a>
                     </div>
                 </div>
             </div>
@@ -228,7 +225,6 @@
                 <div class="row">
                     <div class="col-md-12 text-center white">
                         <h2 class="service-title pad-bt15">Contact us</h2>
-                        <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
                         <hr class="bottom-line white-bg">
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12">
