--- a/team.html
+++ b/team.html
@@ -40,7 +40,7 @@
                     <li class="active"><a href="index.html#main-header">Home</a></li>
                     <li class=""><a href="index.html#about">About</a></li>
                     <li class=""><a href="index.html#resources">Resources</a></li>
-                    <li class=""><a href="womenSTEM.html">Opportunities</a></li>
+                    <li class=""><a href="womenSTEM.html">Outreach</a></li>
                     <li class=""><a href="team.html">Team</a></li>
                     <li class=""><a href="index.html#contact">Contact Us</a></li>
                 </ul>
@@ -63,39 +63,39 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                        <a href="http://hirschlab.cfans.umn.edu/">
+                        <a href="http://hirschlab.cfans.umn.edu/" target="_blank">
                             <img src="img/Field2.jpg" class="img-responsive">
                         </a>
                     </div>
                     <div class="blog-info text-center">
-                        <h2><a href="http://hirschlab.cfans.umn.edu/" style="color:#be9e21">Candice Hirsch</a></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+                        <h2><a href="http://hirschlab.cfans.umn.edu/" style="color:#be9e21" target="_blank">Candice Hirsch</a></h2>
+                        <p>Department of Agronomy and Plant Genetics University of Minnesota</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                        <a href="https://www.ipb.iastate.edu/people/marna-yandeau-nelson">
+                        <a href="https://www.ipb.iastate.edu/people/marna-yandeau-nelson" target="_blank">
                             <img src="img/Wstem.JPG" class="img-responsive">
                         </a>
                     </div>
                     <div class="blog-info text-center">
-                        <h2><a href="https://www.ipb.iastate.edu/people/marna-yandeau-nelson" style="color:#be9e21">Marna D Yandeau-Nelson</a></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+                        <h2><a href="https://www.ipb.iastate.edu/people/marna-yandeau-nelson" style="color:#be9e21" target="_blank">Marna Yandeau-Nelson</a></h2>
+                        <p>Department of Genetics, Development, and Cell Biology Iowa State University</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                        <a href="https://cbs.umn.edu/contacts/suzanne-mcgaugh">
+                        <a href="https://cbs.umn.edu/contacts/suzanne-mcgaugh" target="_blank">
                             <img src="img/Wstem2.JPG" class="img-responsive">
                         </a>
                     </div>
                     <div class="blog-info text-center">
-                        <h2><a href="https://cbs.umn.edu/contacts/suzanne-mcgaugh" style="color:#be9e21">Suzanne McGaugh</a></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+                        <h2><a href="https://cbs.umn.edu/contacts/suzanne-mcgaugh" style="color:#be9e21" target="_blank">Suzanne McGaugh</a></h2>
+                        <p>Department of Ecology, Evolution, and Behavior University of Minnesota </p>
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                     <div class="blog-info text-center">
-                        <h2>Derk Loneman</h2>
+                        <h2>Derek Loneman</h2>
                     </div>
             </div>
         </div>
