--- a/womenSTEM.html
+++ b/womenSTEM.html
@@ -44,7 +44,7 @@
                     <li class="active"><a href="index.html#main-header">Home</a></li>
                     <li class=""><a href="index.html#about">About</a></li>
                     <li class=""><a href="index.html#resources">Resources</a></li>
-                    <li class=""><a href="womenSTEM.html">Opportunities</a></li>
+                    <li class=""><a href="womenSTEM.html">Outreach</a></li>
                     <li class=""><a href="team.html">Team</a></li>
                     <li class=""><a href="index.html#contact">Contact Us</a></li>
                 </ul>
@@ -58,7 +58,7 @@
 <br>
 <div class="container">
     <div class="row">
-        <h2 class="service-title2 pad-bt15">Funding opportunities for women in STEM</h2>
+        <h2 class="service-title2 pad-bt15">Opportunities for women in STEM</h2>
     </div>
 
     <div class="row">
