--- a/team.html
+++ b/team.html
@@ -41,6 +41,7 @@
                     <li class=""><a href="index.html#about">About</a></li>
                     <li class=""><a href="index.html#resources">Resources</a></li>
                     <li class=""><a href="womenSTEM.html">Outreach</a></li>
+                    <li class=""><a href="index.html#papers">Papers</a></li>
                     <li class=""><a href="team.html">Team</a></li>
                     <li class=""><a href="index.html#contact">Contact Us</a></li>
                 </ul>
@@ -64,7 +65,7 @@
                 <div class="blog-sec">
                     <div class="blog-img3">
                         <a href="http://hirschlab.cfans.umn.edu/" target="_blank">
-                            <img src="img/Field2.jpg" class="img-responsive">
+                            <img src="img/Team/Candice.jpg" class="img-responsive" style="max-height: 250px">
                         </a>
                     </div>
                     <div class="blog-info text-center">
@@ -76,26 +77,26 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                        <a href="https://www.ipb.iastate.edu/people/marna-yandeau-nelson" target="_blank">
-                            <img src="img/Wstem.JPG" class="img-responsive">
+                        <a href="https://sites.google.com/view/mcgaughlab/" target="_blank">
+                            <img src="img/Team/Suzanne.jpg" class="img-responsive" style="max-height: 250px">
                         </a>
                     </div>
                     <div class="blog-info text-center">
-                        <h2><a href="https://www.ipb.iastate.edu/people/marna-yandeau-nelson" style="color:#be9e21" target="_blank">Marna Yandeau-Nelson</a></h2>
-                        <p>Department of Genetics, Development, and Cell Biology Iowa State University</p>
+                        <h2><a href="https://sites.google.com/view/mcgaughlab/" style="color:#be9e21" target="_blank">Suzanne McGaugh</a></h2>
+                        <p>Department of Ecology, Evolution, and Behavior University of Minnesota </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                        <a href="https://cbs.umn.edu/contacts/suzanne-mcgaugh" target="_blank">
-                            <img src="img/Wstem2.JPG" class="img-responsive">
+                        <a href="https://www.ipb.iastate.edu/people/marna-yandeau-nelson" target="_blank">
+                            <img src="img/Team/Yandeau-Nelson_Marna_large.jpg" class="img-responsive" style="max-height: 250px">
                         </a>
                     </div>
                     <div class="blog-info text-center">
-                        <h2><a href="https://cbs.umn.edu/contacts/suzanne-mcgaugh" style="color:#be9e21" target="_blank">Suzanne McGaugh</a></h2>
-                        <p>Department of Ecology, Evolution, and Behavior University of Minnesota </p>
+                        <h2><a href="https://www.ipb.iastate.edu/people/marna-yandeau-nelson" style="color:#be9e21" target="_blank">Marna Yandeau-Nelson</a></h2>
+                        <p>Department of Genetics, Development, and Cell Biology Iowa State University</p>
                     </div>
                 </div>
             </div>
@@ -110,7 +111,18 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                            <img src="img/Field2.jpg" class="img-responsive" style="max-height: 200px">
+                            <img src="img/Team/Jake.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Jacob Garfin</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Amanda.jpg" class="img-responsive" style="max-height: 200px">
                         </a>
                     </div>
                 </div>
@@ -121,34 +133,12 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                            <img src="img/Wstem2.JPG" class="img-responsive" style="max-height: 200px">
+                            <img src="img/Team/Tom.jpg" class="img-responsive" style="max-height: 200px">
                         </a>
                     </div>
                 </div>
                     <div class="blog-info text-center">
                         <h2>Tom Kono</h2>
-                    </div>
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="blog-sec">
-                    <div class="blog-img3">
-                            <img src="img/Wstem2.JPG" class="img-responsive" style="max-height: 200px">
-                        </a>
-                    </div>
-                </div>
-                    <div class="blog-info text-center">
-                        <h2>Patrick Monnahan</h2>
-                    </div>
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="blog-sec">
-                    <div class="blog-img3">
-                            <img src="img/test.JPG" class="img-responsive" style="max-height: 200px">
-                        </a>
-                    </div>
-                </div>
-                    <div class="blog-info text-center">
-                        <h2>Jean-Michel Michno</h2>
                     </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -162,7 +152,30 @@
                         <h2>Derek Loneman</h2>
                     </div>
             </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Meesh.jpeg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Jean-Michel Michno</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Patrick.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Patrick Monnahan</h2>
+                    </div>
+            </div>
         </div>
+
 
     <!--Grad studens-->
         <div class="row">
@@ -170,7 +183,31 @@
                 <h2 class="service-title pad-bt15">Graduate students</h2>
                 <hr class="bottom-line">
             </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Alex.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Alex Brohmammer</h2>
+                    </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Rafa.JPG" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Rafeal Della Coletta</h2>
+                    </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
                             <img src="img/Team/Hattery_HeadShot_R.jpg" class="img-responsive" style="max-height: 200px">
@@ -181,40 +218,8 @@
                         <h2>Travis Hattery</h2>
                     </div>
             </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="blog-sec">
-                    <div class="blog-img3">
-                            <img src="img/Wstem2.JPG" class="img-responsive" style="max-height: 200px">
-                        </a>
-                    </div>
-                </div>
-                    <div class="blog-info text-center">
-                        <h2>Alex Brohmammer</h2>
-                    </div>
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="blog-sec">
-                    <div class="blog-img3">
-                            <img src="img/Wstem2.JPG" class="img-responsive" style="max-height: 200px">
-                        </a>
-                    </div>
-                </div>
-                    <div class="blog-info text-center">
-                        <h2>Jane Doe</h2>
-                    </div>
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="blog-sec">
-                    <div class="blog-img3">
-                            <img src="img/test.JPG" class="img-responsive" style="max-height: 200px">
-                        </a>
-                    </div>
-                </div>
-                    <div class="blog-info text-center">
-                        <h2>Jane Doe</h2>
-                    </div>
-            </div>
-        </div>
+
+
 
     <!--Undergrads/Highschool-->
         <div class="row">
@@ -270,7 +275,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                            <img src="img/GroupPhoto.JPG" class="img-responsive" style="max-height: 200px">
+                            <img src="img/Team/Girls.jpg" class="img-responsive" style="max-height: 200px">
                         </a>
                     </div>
                 </div>
@@ -292,7 +297,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="blog-sec">
                     <div class="blog-img3">
-                            <img src="img/GroupPhoto.JPG" class="img-responsive" style="max-height: 200px">
+                            <img src="img/Team/Girls.jpg" class="img-responsive" style="max-height: 200px">
                         </a>
                     </div>
                 </div>
@@ -311,7 +316,150 @@
                         <h2>Madeleine Humpal-Pash</h2>
                     </div>
             </div>
-        </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Shannon.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Shannon Werstein</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Brooke.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Brooke Vaillancourt</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Dane.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Dane Bjerklie</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Elizabeth.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Beth Bonillo</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Hazel.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Hazel Chew</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Jacqui.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Jacqueline Tobar</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Jaye.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Jaye McEvoy</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Josh.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Joshua Munoz</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Ka.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Ka Yang</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Lindsey.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Lindsey Kemp</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Mar.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Mar Horns</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Meghan.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Megan Low</h2>
+                    </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="blog-sec">
+                    <div class="blog-img3">
+                            <img src="img/Team/Pippa.jpg" class="img-responsive" style="max-height: 200px">
+                        </a>
+                    </div>
+                </div>
+                    <div class="blog-info text-center">
+                        <h2>Pippa Dobbyn</h2>
+                    </div>
+            </div>
+
         </div>
 
 
