--- a/womenSTEM.html
+++ b/womenSTEM.html
@@ -45,6 +45,7 @@
                     <li class=""><a href="index.html#about">About</a></li>
                     <li class=""><a href="index.html#resources">Resources</a></li>
                     <li class=""><a href="womenSTEM.html">Outreach</a></li>
+                    <li class=""><a href="index.html#papers">Papers</a></li>
                     <li class=""><a href="team.html">Team</a></li>
                     <li class=""><a href="index.html#contact">Contact Us</a></li>
                 </ul>
