--- a/womenSTEM.html
+++ b/womenSTEM.html
@@ -42,11 +42,11 @@
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="index.html#main-header">Home</a></li>
-                    <li class=""><a href="index.html#about">About</a></li>
-                    <li class=""><a href="index.html#resources">Resources</a></li>
+                    <li class=""><a href="index.html">About</a></li>
+                    <li class=""><a href="index.html#indepth">Papers</a></li>
                     <li class=""><a href="womenSTEM.html">Outreach</a></li>
-                    <li class=""><a href="index.html#papers">Papers</a></li>
                     <li class=""><a href="team.html">Team</a></li>
+                    <li class=""><a href="index.html#papers">Resources</a></li>
                     <li class=""><a href="index.html#contact">Contact Us</a></li>
                 </ul>
               </div>
@@ -1047,6 +1047,62 @@
                         <td>Internship</td>
                         <td>All STEM</td>
                         <td>High school sophomore, junior, or senior</td>
+                    </tr>
+                    <tr>
+                        <td>Y-WE Code</td>
+                        <td><a href="http://youngwomenempowered.org/programs/y-we-code/">Young Women Empowered</a></td>
+                        <td>Youth Program</td>
+                        <td>Computer Science</td>
+                        <td>Unspecified</td>
+                    </tr>
+                    <tr>
+                        <td>Y-WE Nature Connections</td>
+                        <td><a href="http://youngwomenempowered.org/programs/y-we-connect/">Young Women Empowered</a></td>
+                        <td>Youth Program</td>
+                        <td>Biology/Ecology</td>
+                        <td>Unspecified</td>
+                    </tr>
+                    <tr>
+                        <td>Unhidden NYC</td>
+                        <td><a href="https://www.unhiddennyc.com/">Unhidden NYC</a></td>
+                        <td>Youth Program</td>
+                        <td>STEM+Arts</td>
+                        <td>Unspecified</td>
+                    </tr>
+                    <tr>
+                        <td>100 Girls of Code</td>
+                        <td><a href="http://www.100girlsofcode.com/">100 Girls of Code</a></td>
+                        <td>Youth Program</td>
+                        <td>Computer Science</td>
+                        <td>Unspecified</td>
+                    </tr>
+                    <tr>
+                        <td>Scientista</td>
+                        <td><a href="http://www.scientistafoundation.com/">Scientista</a></td>
+                        <td>Network</td>
+                        <td>STEM</td>
+                        <td>University students</td>
+                    </tr>
+                    <tr>
+                        <td>National Girls Collaborative Project</td>
+                        <td><a href="http://ngcproject.org/about-ngcp">National Girls Collaborative Project</a></td>
+                        <td>Youth Program</td>
+                        <td>STEM</td>
+                        <td>K-12</td>
+                    </tr>
+                    <tr>
+                        <td>Windows Insider Women in Computing Award</td>
+                        <td><a href="https://insider.windows.com/en-us/community-contests-grace-hopper-celebration-about/">Microsoft Windows</a></td>
+                        <td>Network, Mentorship</td>
+                        <td>Computer Science</td>
+                        <td>Undergraduate-post-doc</td>
+                    </tr>
+                    <tr>
+                        <td>Women in Science and Engineering (WISE) Forum</td>
+                        <td><a href="http://www.davincisciencecenter.org/experience/wise-forum/">Da Vinci Science Center</a></td>
+                        <td>Forum</td>
+                        <td>STEM</td>
+                        <td>High school students</td>
                     </tr>
             </table>
         </div>
