--- a/womenSTEM.html
+++ b/womenSTEM.html
@@ -1114,6 +1114,13 @@
                         <td>STEM</td>
                         <td>High school students</td>
                     </tr>
+                    <tr>
+                        <td>Girls' Resource guide to STEM education</td>
+                        <td><a href="https://www.bachelorsdegreecenter.org/girls-stem-education/">Bachelors Degree Center</a></td>
+                        <td>Resource</td>
+                        <td>STEM</td>
+                        <td>General</td>
+                    </tr>
             </table>
         </div>
     </div>
