--- a/womenSTEM.html
+++ b/womenSTEM.html
@@ -1115,7 +1115,7 @@
                         <td>High school students</td>
                     </tr>
                     <tr>
-                        <td>Girls' Resource guide to STEM education</td>
+                        <td>Girls' resource guide to STEM education</td>
                         <td><a href="https://www.bachelorsdegreecenter.org/girls-stem-education/">Bachelors Degree Center</a></td>
                         <td>Resource</td>
                         <td>STEM</td>
