--- a/index.html
+++ b/index.html
@@ -235,9 +235,10 @@
                     <div class="col-md-9">
                         <br>
                         <br>
-                        <p>Brohammer, A., T. Kono, C. Hirsch. The Maize Pan-Genome. In: Tuberosa, R., Bennetzen, J., Hirsch, C., Flint-Garcia, S. (Ed.)
-                            Compendium of Plant Genomes: The Zea Mays Genome. Springer Nature. (in press)</p>
-                        </a>
+                        <p>Brohammer, A., T. Kono, C. Hirsch. 2018. 
+                            <a href="https://link.springer.com/chapter/10.1007/978-3-319-97427-9_2" target="_blank"> <span class="logo-dec">The Maize Pan-Genome.</span>
+                            </a> In The Maize Genome (pp. 13-29). Springer, Cham.
+                        </p>
                         <br>
                     </div>
                 </div>
@@ -255,7 +256,8 @@
                         <br>
                         <p>Brohammer, A., T. Kono, N. Springer, S. McGaugh, C. Hirsch. 2018. 
                             <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/tpj.13765" target="_blank"> <span class="logo-dec">Limited role of differential fractionation in genome content variation and function in maize (Zea mays L.) inbred lines.</span>
-                            </a>The Plant Journal. 93(1):131-141.</p>
+                            </a>The Plant Journal. 93(1):131-141.
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -287,7 +289,9 @@
                         <br>
                         <br>
                         <p>Mazaheri, M., M. Heckwolf, B. Vaillancourt, J. Gage, B. Burdo, S. Heckwolf, K. Barry, A. Lipzen, C. Ribeiro, T. Kono, H. Kaeppler, E. Spalding, C. Hirsch, C.R. Buell, N. de Leon, S. Kaeppler. 2018. 
-                            Genome-wide association analysis of stalk biomass and anatomical traits in maize. (under revision at BMC Plant Biology)</p>
+                            <a href="https://bmcplantbiol.biomedcentral.com/articles/10.1186/s12870-019-1653-x" target="_blank"> <span class="logo-dec">Genome-wide association analysis of stalk biomass and anatomical traits in maize.</span>
+                            </a>BMC Plant Biology201919:45
+                        </p>
                         <!--<a class="btn btn-primary" href="#">View Project</i></a>-->
                     </div>
                 </div>
